# autoEffectivePop

./: .gitignore  Config.cfg  Config.shlib  Default_Config.cfg  JC_ModifiedEffLaunch.sh  JC_ModifiedManualCalculations.py  LICENSE  README.md  ResultsGatherer.py  __setup__.py  autoEffLaunch.sh  autoEffLaunchNoFilter.sh  batchOnlyFiltering.sh  batchProcessing.sh  blastFiltering.sh  blastFilteringLite.sh  calcEffPopSize.py  calculationsOnly.sh  determineProcessTime.py  errorRetry.py  fetchInput.py  fetchInput.sh  filterByIdentity.py  filterByIdentityLite.py  filterOnlyLaunch.sh  findingOrthogroups.sh  gatherOrthogroupSequences.py  gather_JC_Output.py  gather_JC_Output.sh  getAvgIdentity.py  getProcessTimes.py  getStrainNames.py  getSurvivingStrainNames.py  getUnfilteredStrainNames.py  index.py  inputProcessing.sh  manualCalculations.py  massFetch.sh  massFetch.txt  moveMuscleOutFolders.py  (+10 more)
Core_Gene_Finder/: CoreGeneFinderREADME.txt  coreGeneFinder.py  coreGeneFinder.sh  establishGeneName.py  findSharedCoreGenes.py  initialGeneSetup.py  passGene.py  reference.txt  referenceSimple.txt  scratch_CoreGeneFinder.sh  setupCategories.py  splitConsensus.py
Pre_2to3/: calcEffPopSize.py.bak  calcWattersonsTheta.py.bak  fetchResults.py.bak  getSurvivingStrainNames.py.bak  manualCalculations.py.bak
app/: Default_Config.cfg  __main__.py  autoEffLaunch.sh  blastFiltering.sh  blastFilteringLite.sh  calcEffPopSize.py  filterByIdentity.py  filterByIdentityLite.py  gatherOrthogroupSequences.py  gatherSingleCopyOrthogroups.py  getMutationRate.py  getResultsFolder.py  index.py  (+4 more)
(+11054 files in other folders)
